# cdk-deploy-ec2

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  userdata
.github/workflows/: cdk-deploy.yml  cdk-test.yml
cdk/: classes.py  deploy_ec2.py  deploy_ec2linux.py  deploy_ec2windows.py  functions.py  userdata
cdk/cdk/: deploy_ec2.py
userdata/: docker  docker.sh  kubernetes  kubernetes.sh  php.sh  s3bucket  s3bucket.sh
