[tool.poetry]
name = "cdk-deploy-ec2"
version = "0.1.0"
description = "Deploy EC2 instances using AWS CDK (Python)"
authors = ["TimekillerTK <erwartungen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.25.0"
constructs = ">=10.0.0,<11.0.0"
requests = "2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
